--- a/Ecommerce.Customer/Pages/Product/Details.cshtml
+++ b/Ecommerce.Customer/Pages/Product/Details.cshtml
@@ -41,7 +41,7 @@
                                         </div>*@
                                        @for (var i = 0; i < @Model.ProductDetail.ProductImages.Count; i++)
                                       {
-                                          <div class="swiper-slide">
+                                            <div class="swiper-slide">
                                             <a href="@productDetail.ProductImages.ElementAt(i).ImageUrl" class="single-img gallery-popup">
                                                 <img class="img-full" src="@productDetail.ProductImages.ElementAt(i).ImageUrl" alt="Product Image">
                                             </a>
@@ -59,8 +59,15 @@
                                     <div class="single-product-content">
                                         <h2 class="title">@productDetail.Name</h2>
                                         <div class="price-box pb-1">
-                                            <span class="new-price text-danger">$@productDetail.Price.ToString("0.##")</span>
-                                            @*<span class="old-price text-primary">$90.00</span>*@
+                                    @if(productDetail.Quantity > 0)
+                                    {
+                                        
+                                        <span class="new-price text-danger">$@productDetail.Price.ToString("0.##")</span>
+                                    }
+                                    else
+                                    {
+                                        <span class="old-price text-primary">Hết hàng</span>
+                                    }
                                         </div>
                                         <div class="rating-box-wrap pb-7">
                                             <div class="rating-box">
@@ -78,13 +85,15 @@
                                         </div>
                                         <p class="short-desc mb-6">@productDetail.Desc</p>
                                         <ul class="quantity-with-btn pb-7">
+                                           <form method="post" asp-page="/Product/Details" asp-page-handler="cartlist" asp-route-id="@productDetail.Id">
                                             <li class="quantity">
                                                 <div class="cart-plus-minus">
-                                                    <input class="cart-plus-minus-box" value="1" type="text">
+                                                    <input name="ProductQty" class="cart-plus-minus-box" value="@Model.ProductQty" type="text">
                                                 </div>
                                             </li>
                                             <li class="add-to-cart">
-                                                <a class="btn btn-custom-size lg-size btn-primary btn-secondary-hover rounded-0" href="cart.html">Thêm vào giỏ hàng</a>
+                                                    <button class="btn btn-custom-size lg-size btn-primary btn-secondary-hover rounded-0" type="submit">Thêm vào giỏ hàng</button>
+                                            </form>
                                             </li>
                                             <li class="wishlist-btn-wrap">
                                                 <a class="btn rounded-0" href="wishlist.html">
