--- a/Ecommerce.Customer/Pages/Shared/_HeaderPartialView.cshtml
+++ b/Ecommerce.Customer/Pages/Shared/_HeaderPartialView.cshtml
@@ -29,8 +29,8 @@
                                                 <i class="pe-7s-users"></i>
                                             </button>
                                             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="settingButton">
-                                                <li><a class="dropdown-item" href="my-account.html">My account</a></li>
-                                                <li><a class="dropdown-item" href="login-register.html">Login | Register</a></li>
+                                                <li><a class="dropdown-item" asp-page="/Auth/Login">Login</a></li>
+                                                <li><a class="dropdown-item" asp-page="/Auth/Register">Register</a></li>
                                             </ul>
                                         </li>
                                         <li class="d-none d-md-block">
