--- a/Ecommerce.Customer/Pages/Product/Index.cshtml
+++ b/Ecommerce.Customer/Pages/Product/Index.cshtml
@@ -31,8 +31,8 @@
                         <div class="col-lg-3 order-lg-1 order-2 pt-10 pt-lg-0">
                             <div class="sidebar-area">
                                 <div class="widgets-searchbox mb-9">
-                                    <form id="widgets-searchbox" action="#">
-                                        <input class="input-field" type="text" placeholder="Search">
+                                    <form id="widgets-searchbox" asp-page="/Product/Index" method="get">
+                                        <input class="input-field" type="text" placeholder="Tìm kiếm sản phẩm" name="searchString">
                                         <button class="widgets-searchbox-btn" type="submit">
                                             <i class="pe-7s-search"></i>
                                         </button>
@@ -100,21 +100,25 @@
                                     </div>
                                 </div>
                                 <div class="widgets-area mb-9">
-                                    <h2 class="widgets-title mb-5">Top Rated Products</h2>
+                                    <h2 class="widgets-title mb-5">Sản phẩm mới nhất</h2>
                                     <div class="widgets-item">
                                         <div class="swiper-container widgets-list-slider">
                                             <div class="swiper-wrapper">
-                                                <div class="swiper-slide">
+                                                
+                                                
+                                                @foreach (var item in @Model.newLatestProducts)
+                                                {
+                                                    <div class="swiper-slide">
                                                     <div class="product-list-item">
                                                         <div class="product-img img-zoom-effect">
-                                                            <a href="single-product.html">
-                                                                <img class="img-full" src="~/assets/images/product/small-size/1-1-112x124.jpg" alt="Product Images">
+                                                            <a  asp-page="/Product/Details" asp-route-id="@item.Id">
+                                                                <img class="img-full" src="@item.ProductImages.ElementAt(0).ImageUrl" alt="Product Images">
                                                             </a>
                                                         </div>
                                                         <div class="product-content">
-                                                            <a class="product-name" href="single-product.html">Dried Lemon Green</a>
+                                                            <a class="product-name" asp-page="/Product/Details" asp-route-id="@item.Id">@item.Name</a>
                                                             <div class="price-box pb-1">
-                                                                <span class="new-price">$80.00</span>
+                                                                <span class="new-price">$@item.Price.ToString("0.##")</span>
                                                             </div>
                                                             <div class="rating-box-wrap">
                                                                 <div class="rating-box">
@@ -130,58 +134,7 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div class="swiper-slide">
-                                                    <div class="product-list-item">
-                                                        <div class="product-img img-zoom-effect">
-                                                            <a href="single-product.html">
-                                                                <img class="img-full" src="~/assets/images/product/small-size/1-2-112x124.jpg" alt="Product Images">
-                                                            </a>
-                                                        </div>
-                                                        <div class="product-content">
-                                                            <a class="product-name" href="single-product.html">Natural Coconut</a>
-                                                            <div class="price-box pb-1">
-                                                                <span class="new-price">$80.00</span>
-                                                            </div>
-                                                            <div class="rating-box-wrap">
-                                                                <div class="rating-box">
-                                                                    <ul>
-                                                                        <li><i class="pe-7s-star"></i></li>
-                                                                        <li><i class="pe-7s-star"></i></li>
-                                                                        <li><i class="pe-7s-star"></i></li>
-                                                                        <li><i class="pe-7s-star"></i></li>
-                                                                        <li><i class="pe-7s-star"></i></li>
-                                                                    </ul>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="swiper-slide">
-                                                    <div class="product-list-item">
-                                                        <div class="product-img img-zoom-effect">
-                                                            <a href="single-product.html">
-                                                                <img class="img-full" src="~/assets/images/product/small-size/1-3-112x124.jpg" alt="Product Images">
-                                                            </a>
-                                                        </div>
-                                                        <div class="product-content">
-                                                            <a class="product-name" href="single-product.html">Black Peppepr Read</a>
-                                                            <div class="price-box pb-1">
-                                                                <span class="new-price">$80.00</span>
-                                                            </div>
-                                                            <div class="rating-box-wrap">
-                                                                <div class="rating-box">
-                                                                    <ul>
-                                                                        <li><i class="pe-7s-star"></i></li>
-                                                                        <li><i class="pe-7s-star"></i></li>
-                                                                        <li><i class="pe-7s-star"></i></li>
-                                                                        <li><i class="pe-7s-star"></i></li>
-                                                                        <li><i class="pe-7s-star"></i></li>
-                                                                    </ul>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
+                                                }
                                             </div>
                                         </div>
                                     </div>
@@ -193,7 +146,7 @@
                                            @foreach (var item in categories)
                                            {
                                                <li>
-                                                <a href="javascript:void(0)">@item.Name</a>
+                                                <a asp-page="/Product/Index" asp-route-searchString="@item.Name">@item.Name</a>
                                                </li>
                                            }
                                         </ul>
@@ -237,13 +190,14 @@
                                 @*Start show product*@
                                 <div class="tab-pane fade" id="grid-view" role="tabpanel" aria-labelledby="grid-view-tab">
                                     <div class="product-grid-view row">
-                                        @foreach (var item in products)
+                                        @if(products.Count() != 0) {
+                                            @foreach (var item in products)
                                         {
                                             <div class="col-lg-4 col-sm-6 pt-6 pt-sm-0">
                                             <div class="product-item">
                                                 <div class="product-img img-zoom-effect">
                                                     <a asp-page="/Product/Details" asp-route-id="@item.Id">
-                                                        <img class="img-full" src="@(item.ProductImages.Count > 0 ? item.ProductImages.ElementAt(0).ImageUrl : null)" alt="Product Images">
+                                                        <img class="img-full" style="height: 269px!important" src="@(item.ProductImages.Count > 0 ? item.ProductImages.ElementAt(0).ImageUrl : null)" alt="Product Images">
                                                     </a>
                                                     <div class="product-add-action">
                                                         <ul>
@@ -281,14 +235,23 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                        </div>
-                                        }
-                                        
+                                            </div>
+                                    }
+                                }
+                                else
+                                {
+                                    <div style="padding-left: 30px">
+                                        Không tìm thấy sản phẩm.
+                                    </div>
+                                }
+
                                     </div>
                                 </div>
                                 <div class="tab-pane fade show active" id="list-view" role="tabpanel" aria-labelledby="list-view-tab">
                                     <div class="product-list-view with-sidebar row">                                  
-                                        @foreach (var item in products)
+                                @if(products.Count() != 0)
+                                {
+                                    @foreach (var item in products)
                                        {
                                            <div class="col-12 pt-6">
                                             <div class="product-item">
@@ -334,8 +297,15 @@
                                                 </div>
                                             </div>
                                         </div>
-                                       }
+                                    }
+                                }
+                                else
+                                {
+                                    <div style="padding-left: 30px">
+                                        Không tìm thấy sản phẩm
                                     </div>
+                                }
+                            </div>
                                 </div>
 
                                 @*End show product*@
@@ -348,8 +318,13 @@
                                                 <span class="fa fa-chevron-left"></span>
                                             </a>
                                         </li>
-                                        <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                                        <li class="page-item"><a class="page-link" href="#">2</a></li>
+
+                                        @for (var i = 1; i <= @Model.Products.TotalPages; i++)
+                                        {
+                                                <li class="page-item @(i == @Model.CurrentPage ? "active" : "")">
+                                                    <a class="page-link" asp-route-pageIndex="@i" asp-route-searchString="@Model.CurrentSeacrh">@i</a>
+                                                </li>
+                                        }
                                         <li class="page-item">
                                             <a class="page-link" href="#" aria-label="Next">
                                                 <span class="fa fa-chevron-right"></span>
