Service + Dto  Order, OrderDetail, Rating  and Fix Entities

--- a/Ecommerce.Customer/Pages/Product/Cart.cshtml
+++ b/Ecommerce.Customer/Pages/Product/Cart.cshtml
@@ -53,7 +53,7 @@
                                                 </td>
                                                 <td class="product-thumbnail">
                                                     <a href="javascript:void(0)">
-                                                        <img src="@carts.ElementAt(i).Product.ProductImages.ElementAt(0).ImageUrl" alt="Cart Thumbnail">
+                                                        <img style="width: 300px" src="@carts.ElementAt(i).Product.ProductImages.ElementAt(0).ImageUrl" alt="Cart Thumbnail">
                                                     </a>
                                                 </td>
                                                 <td class="product-name"><a href="javascript:void(0)">@carts.ElementAt(i).Product.Name</a></td>
