--- a/Ecommerce.Customer/Pages/Product/Cart.cshtml
+++ b/Ecommerce.Customer/Pages/Product/Cart.cshtml
@@ -91,7 +91,7 @@
                                                 <li>Subtotal <span>$@carts.Sum(i => i.Quantity * i.Product.Price)</span></li>
                                                 <li>Total <span>$@carts.Sum(i => i.Quantity * i.Product.Price)</span></li>
                                             </ul>
-                                            <a href="javascript:void(0)">Proceed to checkout</a>
+                                            <a asp-page="/Product/Checkout">Proceed to checkout</a>
                                         </div>
                                     </div>
                                 </div>
