--- a/Ecommerce.Customer/Pages/Product/Details.cshtml
+++ b/Ecommerce.Customer/Pages/Product/Details.cshtml
@@ -194,85 +194,30 @@
                                 </div>
                                 <div class="tab-pane fade" id="reviews" role="tabpanel" aria-labelledby="reviews-tab">
                                     <div class="product-review-body">
-                                        <h4 class="heading mb-5">3 Review Items</h4>
+                                        <h4 class="heading mb-5">@Model.ListReviews.Count Review Items</h4>
                                         <ul class="user-info-wrap">
-                                            <li>
+                                            @foreach (var item in @Model.ListReviews)
+                                           {
+                                               <li>
                                                 <ul class="user-info">
                                                     <li class="user-avatar">
                                                         <img src="~/assets/images/testimonial/user/1.png" alt="User Image">
                                                     </li>
                                                     <li class="user-comment">
                                                         <div class="rating-box">
-                                                            <ul>
-                                                                <li><i class="pe-7s-star"></i></li>
-                                                                <li><i class="pe-7s-star"></i></li>
-                                                                <li><i class="pe-7s-star"></i></li>
-                                                                <li><i class="pe-7s-star"></i></li>
-                                                                <li><i class="pe-7s-star"></i></li>
-                                                            </ul>
+                                                            <div class="rateit" data-rateit-value="@item.Star" data-rateit-ispreset="true" data-rateit-readonly="true"></div>
                                                         </div>
                                                         <div class="meta">
-                                                            <span><strong>Oscar -</strong> March 15, 2021</span>
+                                                            <span><strong>Ẩn danh &ensp; </strong>@item.UpdatedDate.ToString("dd MMM, yyyy")</span>
                                                         </div>
-                                                        <p class="short-desc mb-0">“Sed ligula sapien, fermentum id est eget,
-                                                            viverra auctor sem. Vivamus maximus enim vitae urna porta, ut
-                                                            euismod nibh lacinia ellentesque at diam voluptas quas nisi, culpa
-                                                            in accusantium“</p>
+                                                        <p class="short-desc mb-0">@item.Comment</p>
                                                     </li>
                                                 </ul>
                                             </li>
-                                            <li>
-                                                <ul class="user-info">
-                                                    <li class="user-avatar">
-                                                        <img src="~/assets/images/testimonial/user/1.png" alt="User Image">
-                                                    </li>
-                                                    <li class="user-comment">
-                                                        <div class="rating-box">
-                                                            <ul>
-                                                                <li><i class="pe-7s-star"></i></li>
-                                                                <li><i class="pe-7s-star"></i></li>
-                                                                <li><i class="pe-7s-star"></i></li>
-                                                                <li><i class="pe-7s-star"></i></li>
-                                                                <li><i class="pe-7s-star"></i></li>
-                                                            </ul>
-                                                        </div>
-                                                        <div class="meta">
-                                                            <span><strong>Oscar -</strong> March 15, 2021</span>
-                                                        </div>
-                                                        <p class="short-desc mb-0">“Sed ligula sapien, fermentum id est eget,
-                                                            viverra auctor sem. Vivamus maximus enim vitae urna porta, ut
-                                                            euismod nibh lacinia ellentesque at diam voluptas quas nisi, culpa
-                                                            in accusantium“</p>
-                                                    </li>
-                                                </ul>
-                                            </li>
-                                            <li>
-                                                <ul class="user-info">
-                                                    <li class="user-avatar">
-                                                        <img src="~/assets/images/testimonial/user/1.png" alt="User Image">
-                                                    </li>
-                                                    <li class="user-comment">
-                                                        <div class="rating-box">
-                                                            <ul>
-                                                                <li><i class="pe-7s-star"></i></li>
-                                                                <li><i class="pe-7s-star"></i></li>
-                                                                <li><i class="pe-7s-star"></i></li>
-                                                                <li><i class="pe-7s-star"></i></li>
-                                                                <li><i class="pe-7s-star"></i></li>
-                                                            </ul>
-                                                        </div>
-                                                        <div class="meta">
-                                                            <span><strong>Oscar -</strong> March 15, 2021</span>
-                                                        </div>
-                                                        <p class="short-desc mb-0">“Sed ligula sapien, fermentum id est eget,
-                                                            viverra auctor sem. Vivamus maximus enim vitae urna porta, ut
-                                                            euismod nibh lacinia ellentesque at diam voluptas quas nisi, culpa
-                                                            in accusantium“</p>
-                                                    </li>
-                                                </ul>
-                                            </li>
+                                           }
+                                            
                                         </ul>
-                                        <div class="feedback-area pt-5">
+                                        @*<div class="feedback-area pt-5">
                                             <h2 class="heading mb-1">Add a review</h2>
                                             <p class="short-desc mb-3">Your email address will not be published.</p>
                                             <div class="rating-box">
@@ -304,7 +249,7 @@
                                                     <button type="submit" value="submit" class="btn btn-custom-size lg-size btn-secondary btn-primary-hover btn-lg rounded-0" name="submit">Submit</button>
                                                 </div>
                                             </form>
-                                        </div>
+                                        </div>*@
                                     </div>
                                 </div>
                                 <div class="tab-pane fade" id="shipping" role="tabpanel" aria-labelledby="shipping-tab">
