--- a/Ecommerce.Customer/Pages/Auth/Register.cshtml
+++ b/Ecommerce.Customer/Pages/Auth/Register.cshtml
@@ -9,36 +9,65 @@
                 <div class="container">
                     <div class="row" style="justify-content: center">
                         <div class="col-lg-6 pt-10 pt-lg-0">
-                            <form action="#">
+                            <form method="post" asp-page="/Auth/Register" asp-page-handler="register">
                                 <div class="login-form">
                                     <h4 class="login-title">Register</h4>
                                     <div class="row">
                                         <div class="col-md-6 col-12">
-                                            <label>Họ*</label>
-                                            <input type="text" placeholder="Nhập Họ">
+                                            <label asp-for="@Model.UserRegistration.FirstName">FirstName*</label>
+                                            <input asp-for="@Model.UserRegistration.FirstName" type="text" placeholder="FirstName">
+                                            <span class="text-danger" asp-validation-for="@Model.UserRegistration.FirstName"></span>
                                         </div>
                                         <div class="col-md-6 col-12">
-                                            <label>Tên*</label>
-                                            <input type="text" placeholder="Nhập Tên">
+                                            <label asp-for="@Model.UserRegistration.LastName">LastName*</label>
+                                            <input asp-for="@Model.UserRegistration.LastName" type="text" placeholder="LastName">
+                                            <span class="text-danger" asp-validation-for="@Model.UserRegistration.LastName"></span>
+
                                         </div>
                                         <div class="col-md-12">
-                                            <label>Email*</label>
-                                            <input type="email" placeholder="Nhập địa chỉ email">
+                                            <label asp-for="@Model.UserRegistration.Email">Email*</label>
+                                            <input asp-for="@Model.UserRegistration.Email" type="email" placeholder="Email">
+                                            <span class="text-danger" asp-validation-for="@Model.UserRegistration.Email"></span>
+
                                         </div>
                                         <div class="col-md-12">
-                                            <label>Số điện thoại*</label>
-                                            <input type="number" placeholder="Nhập số điện thoại">
+                                            <label asp-for="@Model.UserRegistration.PhoneNumber">PhoneNumber*</label>
+                                            <input asp-for="@Model.UserRegistration.PhoneNumber" placeholder="PhoneNumber">
+                                            <span class="text-danger" asp-validation-for="@Model.UserRegistration.PhoneNumber"></span>
+
+                                        </div>
+                                        <div class="col-md-12">
+                                            <label asp-for="@Model.UserRegistration.Line1">Street*</label>
+                                            <input asp-for="@Model.UserRegistration.Line1" type="text" placeholder="Street">
+                                            <span class="text-danger" asp-validation-for="@Model.UserRegistration.Line1"></span>
+
+                                        </div>
+                                        <div class="col-md-12">
+                                            <label asp-for="@Model.UserRegistration.Province">Province*</label>
+                                            <input asp-for="@Model.UserRegistration.Province"  type="text" placeholder="Province">
+                                            <span class="text-danger" asp-validation-for="@Model.UserRegistration.Province"></span>
+
+                                        </div>
+                                        <div class="col-md-12">
+                                            <label asp-for="@Model.UserRegistration.Country">Country*</label>
+                                            <input asp-for="@Model.UserRegistration.Country"  type="text" placeholder="Province">
+                                            <span class="text-danger" asp-validation-for="@Model.UserRegistration.Country"></span>
+
                                         </div>
                                         <div class="col-md-6">
-                                            <label>Mật khẩu*</label>
-                                            <input type="password" placeholder="Nhập mật khẩu">
+                                            <label asp-for="@Model.UserRegistration.Password"> Password*</label>
+                                            <input asp-for="@Model.UserRegistration.Password" type="password" placeholder="Password">
+                                            <span class="text-danger" asp-validation-for="@Model.UserRegistration.Password"></span>
+
                                         </div>
                                         <div class="col-md-6">
-                                            <label>Xác nhận mật khẩu*</label>
-                                            <input type="password" placeholder="Xác nhận mật khẩu">
+                                            <label asp-for="@Model.UserRegistration.ConfirmPassword">ConfirmPassword*</label>
+                                            <input  asp-for="@Model.UserRegistration.ConfirmPassword" type="password" placeholder="ConfirmPassword">
+                                            <span class="text-danger" asp-validation-for="@Model.UserRegistration.ConfirmPassword"></span>
+
                                         </div>
                                         <div class="col-12">
-                                            <button class="btn btn-custom-size lg-size btn-secondary btn-primary-hover rounded-0">Đăng ký</button>
+                                            <button class="btn btn-custom-size lg-size btn-secondary btn-primary-hover rounded-0" type="submit">Đăng ký</button>
                                         </div>
                                     </div>
                                 </div>
@@ -48,3 +77,6 @@
                 </div>
             </div>
 </main>
+@section scripts{
+   <partial name="_ValidationScriptsPartial" />
+}
