Fix layout customer

--- a/Ecommerce.Customer/Pages/Product/Details.cshtml
+++ b/Ecommerce.Customer/Pages/Product/Details.cshtml
@@ -201,7 +201,7 @@
                                                <li>
                                                 <ul class="user-info">
                                                     <li class="user-avatar">
-                                                        <img src="~/assets/images/testimonial/user/1.png" alt="User Image">
+                                                        <img style="width: 85px; height: 85px" src="~/assets/images/testimonial/user/people.png" alt="User Image">
                                                     </li>
                                                     <li class="user-comment">
                                                         <div class="rating-box">
