--- a/Ecommerce.Customer/Pages/Product/Index.cshtml
+++ b/Ecommerce.Customer/Pages/Product/Index.cshtml
@@ -76,7 +76,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="widgets-area mb-9">
+                                @*<div class="widgets-area mb-9">
                                     <h2 class="widgets-title mb-5">Size</h2>
                                     <div class="widgets-item">
                                         <ul class="widgets-checkbox">
@@ -98,7 +98,7 @@
                                             </li>
                                         </ul>
                                     </div>
-                                </div>
+                                </div>*@
                                 <div class="widgets-area mb-9">
                                     <h2 class="widgets-title mb-5">Sản phẩm mới nhất</h2>
                                     <div class="widgets-item">
