--- a/Ecommerce.Customer/Pages/Home/Index.cshtml
+++ b/Ecommerce.Customer/Pages/Home/Index.cshtml
@@ -18,19 +18,12 @@
                     <div class="swiper-slide animation-style-01">
                         <div class="slide-inner bg-height" data-bg-image="assets/images/slider/bg/1-1.jpg">
                             <div class="parallax-img-wrap">
-                                <div class="chilly">
-                                    <div class="scene fill">
-                                        <div class="expand-width" data-depth="0.2">
-                                            <img src="assets/images/slider/inner-img/1-1-231x210.png" alt="Inner Image">
-                                        </div>
-                                    </div>
-                                </div>
                                 <div class="avocado">
-                                    <div class="scene fill">
+@*                                    <div class="scene fill">
                                         <div class="expand-width" data-depth="0.5">
                                             <img src="assets/images/slider/inner-img/1-2-224x204.png" alt="Inner Image">
                                         </div>
-                                    </div>
+                                    </div>*@
                                 </div>
                             </div>
                             <div class="container">
@@ -46,7 +39,7 @@
                                         <div class="tomatoes">
                                             <div class="scene fill">
                                                 <div class="expand-width" data-depth="0.5">
-                                                    <img src="assets/images/slider/inner-img/1-3-601x534.png" alt="Inner Image">
+                                                    <img style="width: 585px; height: 585px" src="assets/images/slider/inner-img/Wagyu.jpg" alt="Inner Image">
                                                 </div>
                                             </div>
                                         </div>
@@ -58,19 +51,12 @@
                     <div class="swiper-slide animation-style-01">
                         <div class="slide-inner bg-height" data-bg-image="assets/images/slider/bg/1-1.jpg">
                             <div class="parallax-img-wrap">
-                                <div class="chilly">
-                                    <div class="scene fill">
-                                        <div class="expand-width" data-depth="0.2">
-                                            <img src="assets/images/slider/inner-img/1-1-231x210.png" alt="Inner Image">
-                                        </div>
-                                    </div>
-                                </div>
                                 <div class="avocado">
-                                    <div class="scene fill">
+                                    @*<div class="scene fill">
                                         <div class="expand-width" data-depth="0.5">
                                             <img src="assets/images/slider/inner-img/1-2-224x204.png" alt="Inner Image">
                                         </div>
-                                    </div>
+                                    </div>*@
                                 </div>
                             </div>
                             <div class="container">
@@ -86,7 +72,7 @@
                                         <div class="tomatoes">
                                             <div class="scene fill">
                                                 <div class="expand-width" data-depth="0.5">
-                                                    <img src="assets/images/slider/inner-img/2-1-601x426.png" alt="Inner Image">
+                                                    <img style="width: 585px; height: 585px" src="assets/images/slider/inner-img/catuoi.jpg" alt="Inner Image">
                                                 </div>
                                             </div>
                                         </div>
@@ -297,7 +283,7 @@
                             <div class="papaya">
                                 <div class="scene fill">
                                     <div class="expand-width" data-depth="0.2">
-                                        <img src="assets/images/banner/inner-img/2-1-503x430.png" alt="Banner Images">
+                                        <img src="assets/images/slider/inner-img/egg.jpg" alt="Banner Images">
                                     </div>
                                 </div>
                             </div>
